--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Views\" />
     <Folder Include="Services\" />
     <Folder Include="Controls\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Services.cs" />
