* CustomEntry.cs: fixed building selection in filter view
* App.xaml.cs:
* CustomEntry.cs:
* CustomEntry.cs:
* Building.cs:
* APIpaths.cs:
* DataAccess.cs:
* ManageGo.iOS.csproj:
* MaintenanceTicket.cs:
* Welcomepagemodel.cs:
* ManageGo.Android.csproj:
* MaintenanceTicketsPage.xaml:
* TicketFilterSelectView.xaml:
* MaintenanceTicketsPage.xaml.cs:
* TicketFilterSelectView.xaml.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -70,6 +70,7 @@
     <Compile Include="CalendarPageAdapter.cs" />
     <Compile Include="CalendarViewPager.cs" />
     <Compile Include="DrawableControlView.cs" />
+    <Compile Include="CustomEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
