* ManageGo.Android.csproj: added ticket detail view
* App.xaml:
* File.cs:
* Comments.cs:
* FontData.cs:
* APIpaths.cs:
* CommentTypes.cs:
* DataAccess.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* plus_1.png:
* chat_lg.png:
* plus_1_1.png:
* gradient.png:
* plus_1@2x.png:
* plus_1@3x.png:
* TicketDetailsPage.xaml:
* chat_lg@2x.png:
* BaseDetailPage.cs:
* chat_lg@3x.png:
* plus_1_1@3x.png:
* plus_1_1@2x.png:
* Welcomepagemodel.cs:
* TicketDetailsPage.xaml.cs:
* MaintenanceTicketsPage.xaml:
* FormattedStringBuilder.cs:
* TicketDetailsPageModel.cs:
* MaintenanceTicketsPage.xaml.cs:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* chat_lg.png:
* chat_lg.png:
* plus_1_1.png:
* chat_lg.png:
* plus_1_1.png:
* plus_1_1.png:
* gradient.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -94,6 +94,13 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\chat_lg.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\chat_lg.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\chat_lg.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\plus_1_1.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\plus_1_1.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\plus_1_1.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\gradient.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
