* pdf.js: Added photo/video record/playback
* IShareFile.cs:
* File.cs:
* ManageGo.csproj:
* ListEventArgs.cs:
* CustomWebView.cs:
* Comments.cs:
* APIkeys.cs:
* APIpaths.cs:
* OutputRecorder.cs:
* CustomEntry.cs:
* CameraPreview.cs:
* DataAccess.cs:
* UICameraPreview.cs:
* clip.png:
* WelcomePage.xaml:
* PhotoHelper.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* MGWebViewPage.xaml:
* TakeVideoPage.xaml:
* clip@3x.png:
* CameraPageRenderer.cs:
* clip@2x.png:
* VideoPlayerRenderer.cs:
* MGWebViewPage.xaml.cs:
* TakeVideoPage.xaml.cs:
* CustomWebViewRenderer.cs:
* TicketDetailsPage.xaml:
* arrow_right.png:
* ShareFileImplementation.cs:
* internal_open.png:
* ManageGo.Android.csproj:
* TicketDetailsPage.xaml.cs:
* arrow_right@3x.png:
* arrow_right@2x.png:
* MGWebViewPageModel.cs:
* TakeVideoPageModel.cs:
* CustomWebViewRenderer.cs:
* internal_closed.png:
* MaintenanceTicketsPage.xaml:
* internal_open@2x.png:
* internal_open@3x.png:
* ShareFileImplementation.cs:
* SelectableLabelRenderer.cs:
* MaintenanceTicketComment.cs:
* clip.png:
* file_paths.xml:
* internal_closed@2x.png:
* MaintenanceTicketsPage.xaml.cs:
* TicketDetailsPageModel.cs:
* internal_closed@3x.png:
* clip.png:
* AndroidManifest.xml:
* clip.png:
* Resource.designer.cs:
* clip.png:
* clip.png:
* clip.png:
* clip.png:
* clip.png:
* MaintenanceTicketsPageModel.cs:
* clip.png:
* clip.png:
* clip_iso.png:
* clip_iso.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -75,6 +75,8 @@
     <Compile Include="DrawableControlView.cs" />
     <Compile Include="CustomEntry.cs" />
     <Compile Include="SelectableLabelRenderer.cs" />
+    <Compile Include="CustomWebViewRenderer.cs" />
+    <Compile Include="ShareFileImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -177,6 +179,18 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\star_blue.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\unchecked.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\wrench_blue.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\clip.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\clip.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\clip.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\clip.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\clip.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\clip.png" />
+    <AndroidResource Include="Resources\drawable\clip.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\clip.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\clip.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\clip.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
@@ -191,6 +205,9 @@
       <Project>{53167476-5227-407E-B52C-E2F569F04033}</Project>
       <Name>ManageGo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\pdf.js" />
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
