--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -106,6 +106,11 @@
     <Compile Include="CalendarRenderer.cs" />
     <Compile Include="CustomEntry.cs" />
     <Compile Include="SelectableLabelRenderer.cs" />
+    <Compile Include="CustomWebViewRenderer.cs" />
+    <Compile Include="ShareFileImplementation.cs" />
+    <Compile Include="UICameraPreview.cs" />
+    <Compile Include="CameraPageRenderer.cs" />
+    <Compile Include="OutputRecorder.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -159,7 +164,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="SkiaSharp.Views">
       <Version>1.60.3</Version>
     </PackageReference>
@@ -305,5 +310,17 @@
     <BundleResource Include="Resources\upload_white.png" />
     <BundleResource Include="Resources\upload_white%402x.png" />
     <BundleResource Include="Resources\upload_white%403x.png" />
+    <BundleResource Include="Resources\arrow_right.png" />
+    <BundleResource Include="Resources\arrow_right%402x.png" />
+    <BundleResource Include="Resources\arrow_right%403x.png" />
+    <BundleResource Include="Resources\clip.png" />
+    <BundleResource Include="Resources\clip%402x.png" />
+    <BundleResource Include="Resources\clip%403x.png" />
+    <BundleResource Include="Resources\internal_closed.png" />
+    <BundleResource Include="Resources\internal_closed%402x.png" />
+    <BundleResource Include="Resources\internal_closed%403x.png" />
+    <BundleResource Include="Resources\internal_open.png" />
+    <BundleResource Include="Resources\internal_open%402x.png" />
+    <BundleResource Include="Resources\internal_open%403x.png" />
   </ItemGroup>
 </Project>
