* CameraPageRenderer.cs: fixed andoid cam rotation. Added video   playback
* Jpeg.cs:
* VideoPicker.cs:
* VideoInfo.cs:
* CameraPreview.cs:
* VideoPicker.cs:
* MainActivity.cs:
* VideoStatus.cs:
* VideoSource.cs:
* ManageGo.iOS.csproj:
* VideoPlayer.cs:
* IVideoPicker.cs:
* UriVideoSource.cs:
* PositionSlider.cs:
* VideoPlayerRenderer.cs:
* UICameraPreview.cs:
* VideoPlayerPage.xaml:
* FileVideoSource.cs:
* VideoPlayerPage.xaml.cs:
* VideoPlayerRenderer.cs:
* ResourceVideoSource.cs:
* ManageGo.Android.csproj:
* VideoSourceConverter.cs:
* MGWebViewPageModel.cs:
* TakeVideoPageModel.cs:
* IVideoPlayerController.cs:
* VideoPlayerPageModel.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -78,7 +78,9 @@
     <Compile Include="ShareFileImplementation.cs" />
     <Compile Include="CameraPageRenderer.cs" />
     <Compile Include="UICameraPreview.cs" />
+    <Compile Include="VideoPicker.cs" />
     <Compile Include="VideoPlayerRenderer.cs" />
+    <Compile Include="Jpeg.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
