* AutoFitTextureView.cs: updated to android camera2 api
* Jpeg.cs:
* Orientation.cs:
* CameraPreview.cs:
* CameraDroid.cs:
* CamRecorder.cs:
* CalendarRenderer.cs:
* CalendarViewPage.cs:
* TicketDetailsPage.xaml:
* CalendarPageAdapter.cs:
* ManageGo.Android.csproj:
* CameraPreviewRenderer.cs:
* TakeVideoPageModel.cs:
* CameraCaptureListener.cs:
* ImageAvailableListener.cs:
* CameraCaptureEventArgs.cs:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:
* Resource.designer.cs:
* CameraLayout.xml:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -70,17 +70,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalendarRenderer.cs" />
     <Compile Include="CalendarPageAdapter.cs" />
-    <Compile Include="CalendarViewPager.cs" />
+    <Compile Include="CalendarViewPage.cs" />
     <Compile Include="DrawableControlView.cs" />
     <Compile Include="CustomEntry.cs" />
     <Compile Include="SelectableLabelRenderer.cs" />
     <Compile Include="CustomWebViewRenderer.cs" />
     <Compile Include="ShareFileImplementation.cs" />
-    <Compile Include="CameraPageRenderer.cs" />
+    <Compile Include="CameraPreviewRenderer.cs" />
     <Compile Include="UICameraPreview.cs" />
     <Compile Include="VideoPicker.cs" />
     <Compile Include="VideoPlayerRenderer.cs" />
     <Compile Include="Jpeg.cs" />
+    <Compile Include="CameraCaptureListener.cs" />
+    <Compile Include="CameraDroid.cs" />
+    <Compile Include="AutoFitTextureView.cs" />
+    <Compile Include="ImageAvailableListener.cs" />
+    <Compile Include="CamRecorder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -196,6 +201,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\clip.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\clip.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\photocamera.png" />
+    <AndroidResource Include="Resources\layout\CameraLayout.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
