* ManageGo.Android.csproj: Fixed android video recording
* ManageGo.iOS.csproj:
* TakeVideoPage.xaml:
* VideoPlayerPage.xaml:
* TakeVideoPage.xaml.cs:
* VideoPlayerPage.xaml.cs:
* photo_active.png:
* video_active.png:
* TakeVideoPageModel.cs:
* video_inactive.png:
* photo_inactive.png:
* photo_active@2x.png:
* photo_active@3x.png:
* video_active@2x.png:
* video_active@3x.png:
* VideoPlayerPageModel.cs:
* arrow_left_white.png:
* photo_inactive@2x.png:
* video_inactive@2x.png:
* video_inactive@3x.png:
* arrow_right_white.png:
* photo_inactive@3x.png:
* arrow_left_white@3x.png:
* arrow_left_white@2x.png:
* arrow_right_white@2x.png:
* arrow_right_white@3x.png:
* Resource.designer.cs:
* photo_active.png:
* video_active.png:
* video_inactive.png:
* photo_inactive.png:
* arrow_left_white.png:
* photo_active.png:
* video_active.png:
* arrow_right_white.png:
* photo_active.png:
* video_active.png:
* photo_inactive.png:
* video_inactive.png:
* video_active.png:
* photo_active.png:
* video_active.png:
* photo_active.png:
* photo_inactive.png:
* video_inactive.png:
* arrow_left_white.png:
* photo_inactive.png:
* video_inactive.png:
* arrow_left_white.png:
* photo_inactive.png:
* video_inactive.png:
* arrow_right_white.png:
* arrow_right_white.png:
* arrow_left_white.png:
* arrow_left_white.png:
* arrow_right_white.png:
* arrow_right_white.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -202,6 +202,36 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\clip.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\photocamera.png" />
     <AndroidResource Include="Resources\layout\CameraLayout.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\arrow_left_white.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\arrow_right_white.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\photo_active.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\photo_inactive.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\video_active.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\video_inactive.png" />
+    <AndroidResource Include="Resources\drawable\arrow_left_white.png" />
+    <AndroidResource Include="Resources\drawable\arrow_right_white.png" />
+    <AndroidResource Include="Resources\drawable\photo_active.png" />
+    <AndroidResource Include="Resources\drawable\photo_inactive.png" />
+    <AndroidResource Include="Resources\drawable\video_active.png" />
+    <AndroidResource Include="Resources\drawable\video_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\arrow_left_white.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\arrow_right_white.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\photo_active.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\photo_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\video_active.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\video_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\arrow_left_white.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\arrow_right_white.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\photo_active.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\photo_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\video_active.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\video_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\arrow_left_white.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\arrow_right_white.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\photo_active.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\photo_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\video_active.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\video_inactive.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
