* CameraPreviewRenderer.cs: adding work orders
* ManageGo.csproj:
* CamRecorder.cs:
* CameraPreview.cs:
* UICameraPreview.cs:
* MainActivity.cs:
* ManageGo.iOS.csproj:
* TakeVideoPage.xaml:
* MGWebViewPage.xaml:
* CameraPageRenderer.cs:
* VideoPlayerPage.xaml:
* TicketDetailsPage.xaml:
* ManageGo.Android.csproj:
* TakeVideoPageModel.cs:
* MGWebViewPageModel.cs:
* capture_camera.png:
* capture_camera@3x.png:
* capture_camera@2x.png:
* TicketDetailsPageModel.cs:
* capture_video_stop.png:
* capture_video_play.png:
* Resource.designer.cs:
* capture_video_stop@3x.png:
* capture_video_play@2x.png:
* capture_video_play@3x.png:
* capture_video_stop@2x.png:
* capture_camera.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_camera.png:
* capture_camera.png:
* capture_camera.png:
* capture_camera.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_play.png:
* capture_video_stop.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -229,6 +229,21 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\photo_inactive.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\video_active.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\video_inactive.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\capture_camera.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\capture_video_play.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\capture_video_stop.png" />
+    <AndroidResource Include="Resources\drawable\capture_camera.png" />
+    <AndroidResource Include="Resources\drawable\capture_video_play.png" />
+    <AndroidResource Include="Resources\drawable\capture_video_stop.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\capture_camera.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\capture_video_play.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\capture_video_stop.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\capture_camera.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\capture_video_play.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\capture_video_stop.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\capture_camera.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\capture_video_play.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\capture_video_stop.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
