--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -55,10 +55,10 @@
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
     <PackageReference Include="SkiaSharp">
-      <Version>1.60.3</Version>
+      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views">
-      <Version>1.60.3</Version>
+      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
@@ -88,6 +88,8 @@
     <Compile Include="CameraStateListener.cs" />
     <Compile Include="CameraCaptureStillPictureSessionCallback.cs" />
     <Compile Include="CompareSizesByArea.cs" />
+    <Compile Include="PreviewCaptureStateCallback.cs" />
+    <Compile Include="TouchEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
