--- a/ManageGo.iOS/Info.plist
+++ b/ManageGo.iOS/Info.plist
@@ -49,5 +49,9 @@
 	<string>This app needs access to microphone.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs access to the photo gallery.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>RobotoMono-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
