* CourierPSStd-Bold.ttf: fixed clock
* App.xaml:
* App.xaml.cs:
* Info.plist:
* APIpaths.cs:
* DataAccess.cs:
* ManageGo.iOS.csproj:
* ClockPicker.cs:
* TicketDetailsPage.xaml:
* ManageGo.Android.csproj:
* CourierPSStd-Bold.ttf:
* TicketDetailsPageModel.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -273,6 +273,9 @@
     <AndroidAsset Include="Assets\RobotoMono-Bold.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AndroidAsset>
+    <AndroidAsset Include="Assets\CourierPSStd-Bold.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidAsset>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
