* ManageGo.Android.csproj: Added first login page
* App.xaml.cs:
* LoginPage.xaml:
* AvailableAuthTypes.cs:
* LocalAuthHelper.cs:
* ClockPicker.cs:
* ManageGo.iOS.csproj:
* LoginPage.xaml.cs:
* pm_active.png:
* am_active.png:
* LoginPageModel.cs:
* TicketDetailsPage.xaml:
* am_inactive.png:
* pm_inactive.png:
* am_active@3x.png:
* am_active@2x.png:
* pm_active@2x.png:
* pm_active@3x.png:
* am_inactive@3x.png:
* am_inactive@2x.png:
* pm_inactive@2x.png:
* pm_inactive@3x.png:
* TicketDetailsPageModel.cs:
* Resource.designer.cs:
* am_active.png:
* pm_active.png:
* am_inactive.png:
* pm_inactive.png:
* pm_active.png:
* am_active.png:
* pm_active.png:
* am_active.png:
* am_active.png:
* pm_inactive.png:
* am_inactive.png:
* pm_active.png:
* pm_inactive.png:
* pm_active.png:
* am_inactive.png:
* am_active.png:
* am_inactive.png:
* pm_inactive.png:
* pm_inactive.png:
* am_inactive.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -253,6 +253,26 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\capture_video_stop.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\close_white.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\close_black.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\am_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\pm_active.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\am_active.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\pm_inactive.png" />
+    <AndroidResource Include="Resources\drawable\pm_inactive.png" />
+    <AndroidResource Include="Resources\drawable\pm_active.png" />
+    <AndroidResource Include="Resources\drawable\am_active.png" />
+    <AndroidResource Include="Resources\drawable\am_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\pm_active.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\am_active.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\pm_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\am_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\pm_inactive.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\pm_active.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\am_active.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\am_inactive.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\am_active.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\am_inactive.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\pm_inactive.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\pm_active.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
