* BorderlessEntry.cs: fixing ticket details
* App.xaml:
* App.xaml.cs:
* User.cs:
* Tenant.cs:
* CustomEntry.cs:
* Categories.cs:
* LoginPage.xaml:
* CamRecorder.cs:
* LocalAuthHelper.cs:
* DataAccess.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* BorderlessEditor.cs:
* MasterMenuPage.xaml:
* NestedListView.cs:
* WelcomePage.xaml.cs:
* NestedListView.cs:
* LocalAuthHelper.cs:
* DrawableControlView.cs:
* MaintenanceTicket.cs:
* TicketDetailsPage.xaml:
* BorderlessEditor.cs:
* LoginPageModel.cs:
* SimpleAuthCallbacks.cs:
* SelectableLabelRenderer.cs:
* DrawableControlView.cs:
* TicketDetailsPage.xaml.cs:
* ManageGo.Android.csproj:
* EditTicketDetailsView.xaml:
* CameraCaptureListener.cs:
* MasterMenuPageModel.cs:
* TicketFilterSelectView.xaml:
* MaintenanceTicketsPage.xaml:
* SelectableLabelRenderer.cs:
* EditTicketDetailsView.xaml.cs:
* icon.png:
* colors.xml:
* styles.xml:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* fingerprint.png:
* icon.png:
* splash_screen.xml:
* Icon76.png:
* Icon80.png:
* Icon40.png:
* Icon58.png:
* Icon60.png:
* logo_simple.png:
* Icon87.png:
* Icon180.png:
* icon_87.png:
* icon_80.png:
* icon_76.png:
* icon_60.png:
* icon_58.png:
* icon_40.png:
* logo_simple.png:
* Icon152.png:
* Icon167.png:
* icon_180.png:
* Icon1024.png:
* icon_167.png:
* icon_152.png:
* Contents.json:
* radio_selected.png:
* radio_unselected.png:
* app_icon_1024-01.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -15,7 +15,7 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -90,6 +90,10 @@
     <Compile Include="CompareSizesByArea.cs" />
     <Compile Include="PreviewCaptureStateCallback.cs" />
     <Compile Include="TouchEffect.cs" />
+    <Compile Include="BorderlessEntry.cs" />
+    <Compile Include="LocalAuthHelper.cs" />
+    <Compile Include="SimpleAuthCallbacks.cs" />
+    <Compile Include="NestedListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -273,6 +277,13 @@
     <AndroidResource Include="Resources\drawable-hdpi\am_inactive.png" />
     <AndroidResource Include="Resources\drawable-hdpi\pm_inactive.png" />
     <AndroidResource Include="Resources\drawable-hdpi\pm_active.png" />
+    <AndroidResource Include="Resources\drawable\icon.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\splash_screen.xml" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\logo_simple.png" />
+    <AndroidResource Include="Resources\drawable\fingerprint.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\radio_selected.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\radio_unselected.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
