* Camera2BasicSurfaceTextureListener.cs: fixed fingerprint for new   Androids {9}
* App.xaml.cs:
* Info.plist:
* AvailableAuthTypes.cs:
* CamRecorder.cs:
* MainActivity.cs:
* LocalAuthHelper.cs:
* LoginPageModel.cs:
* CameraStateListener.cs:
* SimpleAuthCallbacks.cs:
* ManageGo.Android.csproj:
* CameraCaptureListener.cs:
* CameraPreviewRenderer.cs:
* LocalPermissionsHelper.cs:
* TicketDetailsPageModel.cs:
* PreviewCaptureStateCallback.cs:
* AndroidManifest.xml:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -94,6 +94,7 @@
     <Compile Include="LocalAuthHelper.cs" />
     <Compile Include="SimpleAuthCallbacks.cs" />
     <Compile Include="NestedListView.cs" />
+    <Compile Include="LocalPermissionsHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
