--- a/ManageGo.iOS/Info.plist
+++ b/ManageGo.iOS/Info.plist
@@ -54,5 +54,7 @@
 		<string>RobotoMono-Bold.ttf</string>
 		<string>CourierPSStd-Bold.ttf</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>ManageGO needs Face ID to log in</string>
 </dict>
 </plist>
