* CamRecorder.cs: fixed ticket details
* App.xaml.cs:
* Tags.cs:
* Comments.cs:
* LoginPage.xaml:
* Categories.cs:
* MGFileType.cs:
* PhotoHelper.cs:
* ManageGo.iOS.csproj:
* MainActivity.cs:
* TakeVideoPage.xaml:
* MaintenanceTicket.cs:
* TakeVideoPage.xaml.cs:
* LoginPageModel.cs:
* rec_dot@2x.png:
* rec_dot@3x.png:
* TicketDetailsPage.xaml:
* CalendarView.xaml.cs:
* Welcomepagemodel.cs:
* VideoPlayerRenderer.cs:
* ManageGo.Android.csproj:
* TicketDetailsPage.xaml.cs:
* TakeVideoPageModel.cs:
* EditTicketDetailsView.xaml:
* PicturePickerImplementation.cs:
* styles.xml:
* EditTicketDetailsView.xaml.cs:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:
* PicturePickerImplementation.cs:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* rec_dot.png:
* rec_dot.png:
* arrow_right.png:
* arrow_right.png:
* internal_open.png:
* internal_open.png:
* internal_closed.png:
* internal_closed.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -94,6 +94,7 @@
     <Compile Include="LocalAuthHelper.cs" />
     <Compile Include="SimpleAuthCallbacks.cs" />
     <Compile Include="NestedListView.cs" />
+    <Compile Include="PicturePickerImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -284,6 +285,14 @@
     <AndroidResource Include="Resources\drawable\fingerprint.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\radio_selected.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\radio_unselected.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\rec_dot.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\rec_dot.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\arrow_right.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\arrow_right.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\internal_closed.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\internal_closed.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\internal_open.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\internal_open.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
